--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Significo: Revolutionizing Healthcare with Human-Centric Software</title>
-    <link rel="shortcut icon" href="./images/img4.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/img9.png" type="image/x-icon">
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -591,7 +591,7 @@
       >
         <div class="lcraft w-1/2 py-10 sticky top-0 left-0">
           <p class="text-lg w-[87%] mb-5">
-            Significo is a leading health software creator founded on the belief
+            Significo is a leading health software creator founded on the belief 
             that technology can transform healthcare to put people first.
             Whether they are employees, members, customers, or clients, we never
             forget the real people we're designing for.
@@ -1185,15 +1185,7 @@
         class="section managerPart1 w-full h-screen mt-96"
       >
         <div class="w-[43%] px-10 flex flex-col items-center gap-10">
-          <p class="text-2xl para1 text-center font-[satoshi]">
-            Working with the Significo team has been such a pleasure! We took on
-            a significant project to rebuild our entire platform and the team
-            approached the project with our best interests in mind. They
-            continue to prioritize the end user experience and offer amazing
-            expertise in all of the areas we lack internally. I would personally
-            be lost without this team, their ability to problem solve, their
-            openness to feedback and desire to build the product like it is
-            their own.
+          <p class="text-2xl para1 text-center font-[satoshi]">Working with the Significo team has been such a pleasure! We took on a significant project to rebuild our entire platform and the team approached the project with our best interests in mind. They continue to prioritize the end user experience and offer amazing expertise in all of the areas we lack internally. I would personally be lost without this team, their ability to problem solve, their openness to feedback and desire to build the product like it is their own.
           </p>
           <div class="flex flex-col items-center">
             <div class="imagess w-[7rem] rounded-full h-[7rem] bg-red-500">
@@ -1212,17 +1204,7 @@
         class="section managerPart2 mb-32 w-full h-screen flex justify-end"
       >
         <div class="w-[43%] px-10 flex flex-col items-center gap-10">
-          <p class="text-2xl para2 text-center font-[satoshi]">
-            Working with Significo and their recommendation service has been a
-            game-changer for our occupational prevention efforts. Our customers
-            are extremely satisfied with the tool's impressive technical
-            capabilities and data-driven approach. But what truly sets it apart
-            is the intuitive and modern user experience it offers, making it a
-            breeze for our clients to navigate.By leveraging this service, our
-            customers have successfully tackled presenteeism and absenteeism,
-            making a significant impact on their workforce's well-being. We
-            highly recommend Significo to any organization looking to optimize
-            their occupational health and drive positive change.
+          <p class="text-2xl para2 text-center font-[satoshi]">Working with Significo and their recommendation service has been a game-changer for our occupational prevention efforts. Our customers are extremely satisfied with the tool's impressive technical capabilities and data-driven approach. But what truly sets it apart is the intuitive and modern user experience it offers, making it a breeze for our clients to navigate.By leveraging this service, our customers have successfully tackled presenteeism and absenteeism, making a significant impact on their workforce's well-being. We highly recommend Significo to any organization looking to optimize their occupational health and driv positive change.
           </p>
           <div class="flex flex-col items-center">
             <div class="imagess w-[7rem] rounded-full h-[7rem] bg-red-500">
