--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
               </div>
             </div>
-            <div class="row rgt -translate-x-[60%] w-full flex items-center gap-7 white-space-nowrap">
+            <div class="row rgt -translate-x-[50%] w-full flex items-center gap-7 white-space-nowrap">
               <div class="elem flex items-center gap-5">
                 <h1 class="font-semibold font-[Machina] text-5xl">
                   emphathetic
@@ -279,7 +279,7 @@
                 </div>
               </div>
             </div>
-            <div class="row rgt -translate-x-[60%] w-full flex items-center gap-7 white-space-nowrap">
+            <div class="row rgt -translate-x-[50%] w-full flex items-center gap-7 white-space-nowrap">
               <div class="elem flex items-center gap-5">
                 <h1 class="font-semibold font-[Machina] text-5xl">
                   emphathetic
@@ -676,15 +676,7 @@
 
     <div data-color="white" class="section managerPart1 w-full h-screen mt-96">
       <div class="w-[43%] px-10 flex flex-col items-center gap-10">
-        <p class="text-2xl para1 text-center font-[satoshi]">
-          Working with the Significo team has been such a pleasure! We took on
-          a significant project to rebuild our entire platform and the team
-          approached the project with our best interests in mind. They
-          continue to prioritize the end user experience and offer amazing
-          expertise in all of the areas we lack internally. I would personally
-          be lost without this team, their ability to problem solve, their
-          openness to feedback and desire to build the product like it is
-          their own.
+        <p class="text-2xl para1 text-center font-[satoshi]"> Working with the Significo team has been such a pleasure! We took on a significant project to rebuild our entire platform and the team approached the project with our best interests in mind. They continue to prioritize the end user experience and offer amazing expertise in all of the areas we lack internally. I would personally be lost without this team, their ability to problem solve, their openness to feedback and desire to build the product like it is their own.
         </p>
         <div class="flex flex-col items-center">
           <div class="imagess w-[7rem] rounded-full h-[7rem] bg-red-500">
@@ -701,16 +693,7 @@
     <div data-color="white" class="section managerPart2 mb-32 w-full h-screen flex justify-end">
       <div class="w-[43%] px-10 flex flex-col items-center gap-10">
         <p class="text-2xl para2 text-center font-[satoshi]">
-          Working with Significo and their recommendation service has been a
-          game-changer for our occupational prevention efforts. Our customers
-          are extremely satisfied with the tool's impressive technical
-          capabilities and data-driven approach. But what truly sets it apart
-          is the intuitive and modern user experience it offers, making it a
-          breeze for our clients to navigate.By leveraging this service, our
-          customers have successfully tackled presenteeism and absenteeism,
-          making a significant impact on their workforce's well-being. We
-          highly recommend Significo to any organization looking to optimize
-          their occupational health and driv positive change.
+          Working with Significo and their recommendation service has been a game-changer for our occupational prevention efforts. Our customers are extremely satisfied with the tool's impressive technical capabilities and data-driven approach. But what truly sets it apart is the intuitive and modern user experience it offers, making it a breeze for our clients to navigate.By leveraging this service, our customers have successfully tackled presenteeism and absenteeism, making a significant impact on their workforce's well-being. We highly recommend Significo to any organization looking to optimize their occupational health and driv positive change.
         </p>
         <div class="flex flex-col items-center">
           <div class="imagess w-[7rem] rounded-full h-[7rem] bg-red-500">
