--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>
     Significo: Revolutionizing Healthcare with Human-Centric Software
   </title>
-  <link rel="shortcut icon" href="./images/img9.png" type="image/x-icon" />
+  <link class="fevi" rel="shortcut icon" href="" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css" />
@@ -68,45 +68,29 @@
     </div>
   </div>
   <div class="main w-full">
-    <div data-color="black" class="section home w-full h-[400vh] relative">
+    <div data-fevicon="images/favicon.ico" data-color="black" class="section home w-full h-[400vh] relative">
       <div class="homewrapper w-full overflow-hidden sticky top-0 left-0 relative">
-        <div class="heading1 text-white absolute z-[4] bottom-[7%] left-[3%] w-[100%] leading-[1rem]">
+        <div class="heading1 text-white absolute z-[99] bottom-[7%] left-[3%] w-[100%] leading-[1rem]">
           <h1 class="mb-[5px]">We build big idea.</h1>
           <h1 class="mb-[5px]">Software. Apps. Tools.</h1>
           <h1 class="mb-[5px]">For real people. Real lives.</h1>
         </div>
         <div style="--clip: 100%" class="videocont w-full h-screen absolute z-[4] left-0 top-0 overflow-hidden">
-          <video class="w-full object-cover h-full absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" muted
-            autoplay loop
-            src="https://xgjzloifyvgpbmyonaya.supabase.co/storage/v1/object/public/files/bBj1XfrSyi/1ENIoa5sjq"></video>
+          <video class="w-full object-cover" autoplay muted loop src="videos/vid.mp4"></video>
         </div>
-        <div class="marquees w-full h-screen relative overflow-hidden">
+        <div class="marquees w-full  h-screen relative overflow-hidden">
           <div
             class="heading absolute -translate-x-1/2 left-1/2 text-center top-[10%] text-2xl font-regular font-[satoshi]">
             <h1>Crafting a new paradigm of</h1>
             <h1>healthcare, one that is</h1>
           </div>
-          <div class="w-[90%] absolute rowContainer scale-[50] top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
-            <div class="row lft -translate-x-1/2 w-full flex items-center gap-7 white-space-nowrap">
+          <div class="w-[90%] absolute rowContainer scale-[50] top-[59%] left-1/2 -translate-x-1/2 -translate-y-1/2">
+            <div class="row lft -translate-x-[15vw] w-full flex items-center gap-7 white-space-nowrap">
               <div class="elem flex items-center gap-5">
                 <h1 class="font-semibold font-[Machina] text-5xl">
                   emphathetic
                 </h1>
                 <div class="imagediv overflow-hidden w-[2rem] h-[2rem] bg-yellow-500 rounded-full">
-                  <img class="w-full h-full object-cover" src="./images/img1.png" alt="" />
-                </div>
-              </div>
-              <div class="elem flex items-center gap-5">
-                <h1 class="font-semibold font-[Machina] text-5xl">
-                  emphathetic
-                </h1>
-                <div class="imagediv w-[2rem] h-[2rem] bg-yellow-500 rounded-full">
-                  <img class="w-full h-full object-cover" src="./images/img2.png" alt="" />
-                </div>
-              </div>
-              <div class="elem flex items-center gap-5">
-                <h1 class="font-semibold font-[Machina] text-5xl">useful</h1>
-                <div class="imagediv w-[2rem] h-[2rem] bg-yellow-500 rounded-full">
                   <img class="w-full h-full object-cover" src="./images/img1.png" alt="" />
                 </div>
               </div>
@@ -215,7 +199,7 @@
                 </div>
               </div>
             </div>
-            <div class="row lft -translate-x-1/2 w-full flex items-center gap-7 white-space-nowrap">
+            <div class="row lft -translate-x-[15vw] w-full flex items-center gap-7 white-space-nowrap">
               <div class="elem flex items-center gap-5">
                 <h1 class="font-semibold font-[Machina] text-5xl">
                   emphathetic
@@ -348,7 +332,7 @@
       </div>
     </div>
 
-    <div data-color="cyan" class="section craft w-full px-10 y-10 gap-10 flex items-start">
+    <div data-fevicon="./images/favicon-32x32.png" data-color="cyan" class="section craft w-full px-10 y-10 gap-10 flex items-start">
       <div class="lcraft w-1/2 py-10 sticky top-0 left-0">
         <p class="text-lg w-[87%] mb-5">
           Significo is a leading health software creator founded on the belief
@@ -483,7 +467,7 @@
       </div>
     </div>
 
-    <div data-color="selmon" class="section mainhero w-full">
+    <div data-fevicon="images/salmon fevi.ico" data-color="selmon" class="section mainhero w-full">
       <div class="cont w-full h-[300vh] flex relative">
         <div class="slideCont overflow-hidden sticky left-0 top-0 w-full h-[100vh] gap-10 flex">
           <div class="slide w-full flex-shrink-0 h-full flex items-center justify-center">
@@ -580,7 +564,7 @@
       </div>
     </div>
 
-    <div data-color="white" class="section ourteam w-full mt-60 px-10 py-10">
+    <div data-fevicon="images/white fevi.ico" data-color="white" class="section ourteam w-full mt-60 px-10 py-10">
       <h1 class="text-6xl text-center font-[machinaa] mb-20">Our Team</h1>
 
       <div
@@ -674,7 +658,7 @@
       </div>
     </div>
 
-    <div data-color="white" class="section managerPart1 w-full h-screen mt-96">
+    <div data-fevicon="images/white fevi.ico" data-color="white" class="section managerPart1 w-full h-screen mt-96">
       <div class="w-[43%] px-10 flex flex-col items-center gap-10">
         <p class="text-2xl para1 text-center font-[satoshi]"> Working with the Significo team has been such a pleasure! We took on a significant project to rebuild our entire platform and the team approached the project with our best interests in mind. They continue to prioritize the end user experience and offer amazing expertise in all of the areas we lack internally. I would personally be lost without this team, their ability to problem solve, their openness to feedback and desire to build the product like it is their own.
         </p>
@@ -690,7 +674,7 @@
       </div>
     </div>
 
-    <div data-color="white" class="section managerPart2 mb-32 w-full h-screen flex justify-end">
+    <div data-fevicon="images/white fevi.ico" data-color="white" class="section managerPart2 mb-32 w-full h-screen flex justify-end">
       <div class="w-[43%] px-10 flex flex-col items-center gap-10">
         <p class="text-2xl para2 text-center font-[satoshi]">
           Working with Significo and their recommendation service has been a game-changer for our occupational prevention efforts. Our customers are extremely satisfied with the tool's impressive technical capabilities and data-driven approach. But what truly sets it apart is the intuitive and modern user experience it offers, making it a breeze for our clients to navigate.By leveraging this service, our customers have successfully tackled presenteeism and absenteeism, making a significant impact on their workforce's well-being. We highly recommend Significo to any organization looking to optimize their occupational health and driv positive change.
@@ -707,7 +691,7 @@
       </div>
     </div>
 
-    <div data-color="black" class="section capusals w-full h-[130%] flex gap-10">
+    <div data-fevicon="images/favicon.ico" data-color="black" class="section capusals w-full h-[130%] flex gap-10">
       <div class="cleft w-1/3 px-10 py-5 flex flex-col justify-between">
         <p class="w-[65%] font-medium font-[satoshi]">
           Stay up-to-date on the latest healthcare innovations and thought
